letter spacing issue solved and number changed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1165,7 +1165,7 @@ textarea {
 }
 .offCanvas__side-info .contact-list h4 {
   color: var(--td-common-black);
-  font-weight: 700;
+  font-weight: 500;
   font-size: 18px;
   margin-bottom: 15px;
 }
